Fix dropdown going off screen

--- a/assets/sass/partials/_content.scss
+++ b/assets/sass/partials/_content.scss
@@ -3,7 +3,6 @@ main {
     @include paragraphing(main);
     min-height: 50vh;
 
-    padding-top: 6.4rem;
 
     //.content {
         ul, ol {
